Windows does not generate minidumps on unhandled C++ exceptions

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.0-rc0, 4.7.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v4.4
    • Security 2020-04-06
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Unhandled C++ exceptions do not generate minidumps on Windows. Unhandled SEH exceptions (i.e. ACCESS_VIOLATION) do generate minidumps. This limits are ability to diagnose field and test issues.

      This is a regression since 4.2.

            Assignee:
            Mark Benvenuto
            Reporter:
            Mark Benvenuto
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: