SERVER-44645 Windows does not generate minidumps on unhandled C++ exceptions